--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,109 @@
 # dependencies
 /node_modules
 
+/YT_Scripts
+/YT_Scripts/*
+*/YT_Scripts/*
+
+/YouTube_Experiments_Scripts
+/YouTube_Experiments_Scripts/*
+*/YouTube_Experiments_Scripts/*
+
+/Others_Code_gitignore
+/Others_Code_gitignore/*
+*/Others_Code_gitignore/*
+
+# Ignoring specifically for Kaggle-Gravitational Waves Challenge (Large .npy files)
+
+*.npy
+/*.npy
+*/*.npy
+**/*.npy
+/.npy
+
+# *** START OF FILES SPECIFIC TO AML Course ASSIGNMENTS ****
+
+*/dchad-Clever-Solution-AML-Advised-to-Refer
+/dchad-Clever-Solution-AML-Advised-to-Refer
+dchad-Clever-Solution-AML-Advised-to-Refer
+
+LARGE_Datasets
+*/LARGE_Datasets
+*/LARGE_Datasets/**
+**/LARGE_Datasets/**
+
+*/AML-Data-LargeFiles/**
+**/6-Naive-Bayes-on-Donors-Choose/AML-Data-LargeFiles/**
+**/6-Naive-Bayes-on-Donors-Choose/Kaggle_NB/input/**
+/DONE/6-Naive-Bayes-on-Donors-Choose/Kaggle_NB/input/donorschoose-application-screening/**
+
+*.db
+/*.db
+*/*.db
+**/*.db
+/.db
+
+*.pkl
+/*.pkl
+*/*.pkl
+**/*.pkl
+/.pkl
+
+*.pyc
+/*.pyc
+*/*.pyc
+**/*.pyc
+/.pyc
+
+*.txt
+/*.txt
+*/*.txt
+**/*.txt
+/.txt
+
+*.png
+/*.png
+*/*.png
+**/*.png
+/.png
+
+
+*.csv
+/*.csv
+*/*.csv
+**/*.csv
+/.csv
+
+
+*glove_vectors
+/glove_vectors
+*/*glove_vectors
+**/*glove_vectors
+/glove_vectors
+
+
+
+*.zip
+/*.zip
+*/*.zip
+**/*.zip
+/.zip
+
+*.rar
+/*.rar
+*/*.rar
+**/*.rar
+/.rar
+
+*.7z
+/*.7z
+*/*.7z
+**/*.7z
+/.7z
+
+
+# *** END OF FILES SPECIFIC TO AML Course ASSIGNMENTS ****
+
 # testing
 /coverage
 
@@ -32,11 +135,14 @@ _gh_pages
 *.rej
 *.swo
 *.swp
-*.zip
 *.vi
 *~
 *.~lock*
 .~lock*
+*.asm
+*.bytes
+
+
 
 # OS or Editor folders
 .DS_Store
@@ -51,6 +157,17 @@ nbproject
 *.sublime-project
 *.sublime-workspace
 .idea
+node_modules
+Others_Code_gitignore
+Project-Note-PAUL
+.vscode
+
+
+# Ignore all logfiles and tempfiles.
+*glove_vectors
+!/log/.keep
+/tmp
+/.gems
 
 # Komodo
 *.komodoproject
@@ -59,16 +176,6 @@ nbproject
 # grunt-html-validation
 validation-status.json
 validation-report.json
-
-# Folders to ignore
-node_modules
-Project-Note-PAUL
-.vscode
-
-# Ignore all logfiles and tempfiles.
-!/log/.keep
-/tmp
-/.gems
 
 CountDownTimer-Note.odt
 random-code-1.js
@@ -80,9 +187,47 @@ performance-1.js
 **/*-bkp.js
 **/*-bkp.ts
 **/*-bkp.py
+**/*-BKP.py
+*-BKP.py
+**/*-bkp.ipynb
+**/*-BKP.ipynb
+*-BKP.ipynb
 **/*-test.js
 **/*-test.ts
 **/*-test.py
+**/*-test-.py
+**/*test-.py
 **/*-test.ipynb
 **/*-test.md
 **/*-test.json
+**/* (copy).ipynb
+**/* (copy).py
+
+
+
+# to-ignore-files-ending with -with "test-any-number.js"
+**/*test-[0-9]*.js
+
+# to-ignore-files-ending with -with "test-any-number.ts"
+**/*test-[0-9]*.ts
+
+# to-ignore-files-ending with -with "test-any-number.py"
+**/*test-[0-9]*.py
+
+# to-ignore-files-ending with -with "test-any-number.ipynb"
+**/*test-[0-9]*.ipynb
+
+# to-ignore-files-ending with -with "untitled-any-number.ipynb"
+**/*untitled-[0-9]*.ipynb
+
+# to-ignore-files-ending with -with "untitled.ipynb"
+**/*untitled.ipynb
+
+# If you only want to ignore files-ending with -with "test-any-number.py" in the /static/img/ subdirectory you should either add the following line - to .gitignore file inside that subdirectory
+# **/*test-[0-9]*.py
+
+# OR add the following line in your root .gitignore:
+
+# /static/img/test-[0-9]*.py
+# Source - https://stackoverflow.com/a/18592835/1902852
+.Rproj.user
