git cache cleared

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /YouTube_Experiments_Scripts
 /YouTube_Experiments_Scripts/*
 */YouTube_Experiments_Scripts/*
+**/YouTube_Experiments_Scripts/*
 
 /Others_Code_gitignore
 /Others_Code_gitignore/*
