--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,50 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# Below for all Kaggle and Other Dataset, as they will all be inside input
+# On 22-April, have put all the data inside input
+input/
+*input
+/*input
+*/*input
+**/*input
+/input
+/input/*
+*/input/*
+
+
+.vscode/
+*.vscode
+/*.vscode
+*/*.vscode
+**/*.vscode
+/.vscode
+/.vscode/*
+*/.vscode/*
+
+input_dataset/
+*input_dataset
+/*input_dataset
+*/*input_dataset
+**/*input_dataset
+/input_dataset
+/input_dataset/*
+*/input_dataset/*
+
+
+*input_dataset_2
+/*input_dataset_2
+*/*input_dataset_2
+**/*input_dataset_2
+/input_dataset_2
+/input_dataset_2/*
+*/input_dataset_2/*
+
+# ABOVE ONLY FOR THIS REPO AS I KEPT ALL DATASET UNDER THE ABOVE FOLDER NAME
+
 node_modules/
+Colab_Model_Download/
+wandb/
+mlruns
 # The above is the MOST EFFECTIVE ONE as per
 # https://stackoverflow.com/a/1470664/1902852
 # The way to ignore all directories called "node_modules"
@@ -13,26 +57,98 @@ node_modules/
 # passing the full path of the .next folder
 # git rm -r --cached /media/veracrypt2/014-agency-classic-next/.next
 
+
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+HF_Models/
+
+*HF_Models
+/*HF_Models
+*/*HF_Models
+**/*HF_Models
+/HF_Models
+/HF_Models/*
+
+node_modules/
+# The above is the MOST EFFECTIVE ONE as per
+# https://stackoverflow.com/a/1470664/1902852
+# The way to ignore all directories called "node_modules"
+# anywhere below the current level in a directory tree
+
 *node_modules
 /*node_modules
 */*node_modules
 **/*node_modules
 /node_modules
 /node_modules/*
-*/node_modules/*
+*/node_modules/*in
 
 # If you have performed a task, such as adding a new line item to your .gitignore file, I MUST need to clear out your git repo's cache in order for the changes to take place. Here are the commands for doing that:
-# git rm -r --cached . && git add . && git commit -am 'git cache cleared' && git push
 
+# git rm -r --cached . && git add . && git commit -am 'git cache cleared' && git push
 
 __MACOSX/
 *__MACOSX
 /*__MACOSX
 */*__MACOSX
-**/*__MACOSX
+**/*__MACOSXc
 /__MACOSX
 /__MACOSX/*
 */__MACOSX/*
+
+__pycache__/
+*__pycache__
+/*__pycache__
+*/*__pycache__
+**/*__pycache__c
+/__pycache__
+/__pycache__/*
+*/__pycache__/*
+
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+/*.ipynb_checkpoints
+*/*.ipynb_checkpoints
+**/*.ipynb_checkpointsc
+/.ipynb_checkpoints
+/.ipynb_checkpoints/*
+*/.ipynb_checkpoints/*
+
+-checkpoint.ipynb/
+*-checkpoint.ipynb
+/*-checkpoint.ipynb
+*/*-checkpoint.ipynb
+**/*-checkpoint.ipynb
+/-checkpoint.ipynb
+
+.h5/
+*.h5
+/*.h5
+*/*.h5
+**/*.h5
+/.h5
+
+.pyc/
+*.pyc
+/*.pyc
+*/*.pyc
+**/*.pyc
+/.pyc
+
+
+.bin/
+*.bin
+/*.bin
+*/*.bin
+**/*.bin
+/.bin
+
+.json/
+*.json
+/*.json
+*/*.json
+**/*.json
+/.json
 
 .next/
 *.next
@@ -42,6 +158,7 @@ __MACOSX/
 /.next
 /.next/*
 */.next/*
+
 
 .npy/
 *.npy
@@ -66,11 +183,12 @@ build/
 /*build
 */*build
 **/*build
-/build
+/buildgs
 /build/*
 */build/*
 
 
+.db
 .db/
 *.db
 /*.db
@@ -78,6 +196,8 @@ build/
 **/*.db
 /.db
 
+
+.pkl
 .pkl/
 *.pkl
 /*.pkl
@@ -85,6 +205,24 @@ build/
 **/*.pkl
 /.pkl
 
+.hdf5
+.hdf5/
+*.hdf5
+/*.hdf5
+*/*.hdf5
+**/*.hdf5
+/.hdf5
+
+.pt
+.pt/
+*.pt
+/*.pt
+*/*.pt
+**/*.pt
+/.pt
+
+
+.pyc
 .pyc/
 *.pyc
 /*.pyc
@@ -92,19 +230,44 @@ build/
 **/*.pyc
 /.pyc
 
+
+.txt
 *.txt
 /*.txt
 */*.txt
 **/*.txt
 /.txt
 
+
+.csv
 *.csv
 /*.csv
 */*.csv
 **/*.csv
 /.csv
 
+.index
+*.index
+/*.index
+*/*.index
+**/*.index
+/.index
 
+.mp4/
+*.mp4
+/*.mp4
+*/*.mp4
+**/*.mp4
+/.mp4
+
+.srt/
+*.srt
+/*.srt
+*/*.srt
+**/*.srt
+/.srt
+
+glove_vectors
 *glove_vectors
 /glove_vectors
 */*glove_vectors
@@ -113,11 +276,42 @@ build/
 
 
 
+.zip
 *.zip
 /*.zip
 */*.zip
 **/*.zip
 /.zip
+
+
+.gz
+*.gz
+/*.gz
+*/*.gz
+**/*.gz
+/.gz
+
+
+# Commenting out all .png files as I would need them for image pasting in .md files / notes
+#.png/
+#*.png
+#/*.png
+#*/*.png
+#**/*.png
+#/.png
+
+
+*.jpg
+/*.jpg
+*/*.jpg
+**/*.jpg
+/.jpg
+
+*.jpeg
+/*.jpeg
+*/*.jpeg
+**/*.jpeg
+/.jpeg
 
 *.rar
 /*.rar
@@ -125,54 +319,66 @@ build/
 **/*.rar
 /.rar
 
+
+.tgz/
+*.tgz
+/*.tgz
+*/*.tgz
+**/*.tgz
+/.tgz
+
+.tar/
+*.tar
+/*.tar
+*/*.tar
+**/*.tar
+/.tar
+
 *.7z
 /*.7z
 */*.7z
 **/*.7z
 /.7z
 
-*.tar.gz
-/*.tar.gz
-*/*.tar.gz
-**/*.tar.gz
-/.tar.gz
+.dcm/
+*.dcm
+/*.dcm
+*/*.dcm
+**/*.dcm
+/.dcm
 
+.tiff/
+*.tiff
+/*.tiff
+*/*.tiff
+**/*.tiff
+/.tiff
 
-*.gz
-/*.gz
-*/*.gz
-**/*.gz
-/.gz
-
-# BELOW ONLY FOR YT-VID DIRECTORY
-
-*.mov
-/*.mov
-*/*.mov
-**/*.mov
-/.mov
-
-
-*.mp4
-/*.mp4
-*/*.mp4
-**/*.mp4
-/.mp4
+.nii/
+*.nii
+/*.nii
+*/*.nii
+**/*.nii
+/.nii
 
 LARGE_Datasets
 */LARGE_Datasets
 */LARGE_Datasets/**
 **/LARGE_Datasets/**
 
+/Others_Code_gitignore
+/Others_Code_gitignore/*
+*/Others_Code_gitignore/*
+
+/YouTube_Experiments_Scripts
+/YouTube_Experiments_Scripts/*
+*/YouTube_Experiments_Scripts/*
+
 # *** END OF FILES SPECIFIC TO ML Projects ****
 
-# testing
-/coverage
-
-# production
-/build
 
 # misc
+DS_Store/
 .DS_Store
 .env.local
 .env.development.local
@@ -195,14 +401,61 @@ _gh_pages
 *.rej
 *.swo
 *.swp
+*.zip
 *.vi
 *~
 *.~lock*
 .~lock*
-*.asm
-*.bytes
+
+# OS or Editor folders
+.DS_Store
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+.idea
+
+# Komodo
+*.komodoproject
+.komodotools
+
+# grunt-html-validation
+validation-status.json
+validation-report.json
 
 
+# Ignore all logfiles and tempfiles.
+!/log/.keep
+/tmp
+/.gems
+
+CountDownTimer-Note.odt
+random-code-1.js
+random-code-2.js
+random-code-3.js
+performance-1.js
+
+test.html
+test1.html
+test2.html
+test3.html
+
+#ignore file name ending in "-bkp.js" OR "-bkp.ts"  OR "-bkp.py"  or "-test.js" OR "-test.ts" in its name. So I will have to put "-test.js" at all files that is just for my development-time random testing code .
+**/*-bkp.js
+**/*-bkp.ts
+**/*-bkp.py
+**/*-test.js
+**/*-test.ts
+**/*-test.py
+**/*-test.ipynb
+**/*-test.md
+**/*-test.json
 
 # OS or Editor folders
 .DS_Store
@@ -222,72 +475,5 @@ Others_Code_gitignore
 Project-Note-PAUL
 .vscode
 
-
-# Ignore all logfiles and tempfiles.
-*glove_vectors
-!/log/.keep
-/tmp
-/.gems
-
-# Komodo
-*.komodoproject
-.komodotools
-
-# grunt-html-validation
-validation-status.json
-validation-report.json
-
-CountDownTimer-Note.odt
-random-code-1.js
-random-code-2.js
-random-code-3.js
-performance-1.js
-
-#ignore file name ending in "-bkp.js" OR "-bkp.ts"  OR "-bkp.py"  or "-test.js" OR "-test.ts" in its name. So I will have to put "-test.js" at all files that is just for my development-time random testing code .
-**/*-bkp.js
-**/*-bkp.ts
-**/*-bkp.py
-**/*-BKP.py
-*-BKP.py
-**/*-bkp.ipynb
-**/*-BKP.ipynb
-*-BKP.ipynb
-**/*-test.js
-**/*-test.ts
-**/*-test.py
-**/*-test-.py
-**/*test-.py
-**/*-test.ipynb
-**/*-test.md
-**/*-test.json
-**/* (copy).ipynb
-**/* (copy).py
-
-
-
-# to-ignore-files-ending with -with "test-any-number.js"
-**/*test-[0-9]*.js
-
-# to-ignore-files-ending with -with "test-any-number.ts"
-**/*test-[0-9]*.ts
-
-# to-ignore-files-ending with -with "test-any-number.py"
-**/*test-[0-9]*.py
-
-# to-ignore-files-ending with -with "test-any-number.ipynb"
-**/*test-[0-9]*.ipynb
-
-# to-ignore-files-ending with -with "untitled-any-number.ipynb"
-**/*untitled-[0-9]*.ipynb
-
-# to-ignore-files-ending with -with "untitled.ipynb"
-**/*untitled.ipynb
-
-# If you only want to ignore files-ending with -with "test-any-number.py" in the /static/img/ subdirectory you should either add the following line - to .gitignore file inside that subdirectory
-# **/*test-[0-9]*.py
-
-# OR add the following line in your root .gitignore:
-
-# /static/img/test-[0-9]*.py
-# Source - https://stackoverflow.com/a/18592835/1902852
-.Rproj.user
+# Local Netlify folder
+.netlify
